human_written_tests/WebAssembly/processed_control_flow_validation/test_block_63.wast
(assert_invalid
  (module (func $type-break-last-void-vs-i64 (result i64)
    (block (result i64) (br 0))
  ))
  "type mismatch"
)